--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 		.loadingBackground {
 			background-color: #FFF !important;
+			background: url(assets/htmlimages/loader.gif) no-repeat center center;
 		}
 
 		#loadingString {
