--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		.loadingBackground {
 			background: url(assets/htmlimages/loader.gif) no-repeat center center;
 			background-color: #28323Cff  !important;
-			opacity: 100;
+			opacity: 100 !important;
 		}
 
 		/*#loadingString {
