--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 			z-index: 10010;
 		}
 
-		.loadingBackground {
+		.loadingBackground, #div_Slide {
 			background-color: #28323Cff !important;
 			background: url(assets/htmlimages/loader.gif) no-repeat center center;
-			opacity: 100;
+			opacity: 100 !important;
 		}
 
 		/*#loadingString {
