--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<style type="text/css">
 		#initialLoading {
 			background: url(assets/htmlimages/loader.gif) no-repeat center center;
-			background-color: #ffffff;
+			background-color: #28323Cff;
 			position: absolute;
 			margin: auto;
 			top: 0;
