--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<style type="text/css">
 		#initialLoading {
 			background: url(assets/htmlimages/loader.gif) no-repeat center center;
-			background-color: #28323Cff;
+			background-color: #fff;
 			position: absolute;
 			margin: auto;
 			top: 0;
@@ -21,7 +21,7 @@
 
 		.loadingBackground,
 		#div_Slide {
-			background-color: #28323Cff !important;
+			background-color: #fff !important;
 			background: url(assets/htmlimages/loader.gif) no-repeat center center;
 			background-size: 48px 48px !important;
 			opacity: 100 !important;
