--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<style type="text/css">
 		#initialLoading {
 			background: url(assets/htmlimages/loader.gif) no-repeat center center;
-			background-color: #fff;
+			background-color: #ffffff;
 			position: absolute;
 			margin: auto;
 			top: 0;
@@ -18,7 +18,7 @@
 			bottom: 0;
 			z-index: 10010;
 		}
-
+		
 		.loadingBackground,
 		#div_Slide {
 			background-color: #fff !important;
@@ -36,6 +36,7 @@
 	"
 
 	<script>
+
 		var deviceReady = false;
 		var initCalled = false;
 		var initialized = false;
