--- a/lin3/lin/index.html
+++ b/lin3/lin/index.html
@@ -61,7 +61,7 @@
         <div class="container-lg">
             <H1>Lesson Overview</H1>
 
-            <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-md-center">
+            <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-md-center" style="height: 56.5%;">
                 <div class="col">
                     <a href="01_INTRODUCTION/index.html">
                         <div class="card h-100">
